# cmd-calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
src/exp_calculator/: exp_calculator.cpp  exp_calculator.h  token.cpp  token.h  token_stream.cpp  token_stream.h  variable_table.cpp  variable_table.h
tests/: test_expressions.txt  test_main.cpp
